basic role and docs

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
 # handlers file for ansible-role-docker
+- name: Restart docker
+  ansible.builtin.service:
+    name: docker
+    state: restarted
+    enabled: true
+  ignore_errors: "{{ ansible_check_mode }}"
