fix: fix role for packer builds

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,4 +5,5 @@
     name: docker
     state: restarted
     enabled: true
+  when: manage_docker_service | bool
   ignore_errors: "{{ ansible_check_mode }}"
