--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,9 +1,5 @@
 {
-	"name": "dockbox",
-	"image": "ecshreve/devbox",
-	"features": {
-		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
-	},
-	"runArgs": ["--hostname", "dockbox"],
-	"remoteUser": "eric"
-}
+		"image": "ecshreve/devcon-base",
+		"name": "dockbox",
+		"runArgs": ["--hostname", "dock", "--name", "dock"]
+	}
