--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,5 +2,4 @@
 # defaults file for ansible-role-docker
 docker_ce_package: docker-ce
 docker_daemon_options: {}
-manage_docker_service: true
-
+manage_docker_service: false
